--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "leaflet": "https://github.com/jblarsen/Leaflet.git#master",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "latlng-format": "NielsHolt/latlng-format#master"
   }
 }
