--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-layer-sealevel-denmark",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "homepage": "https://github.com/FCOO/leaflet-layer-sealevel-denmark",
   "authors": [
     "Jesper Larsen jla@fcoo.dk"
@@ -17,8 +17,7 @@
   "dependencies": {
     "leaflet": "latest",
     "jquery": "latest",
-    "latlng-format": "fcoo/latlng-format",
-    "leaflet-latlng-format": "fcoo/leaflet-latlng-format"
+    "leaflet-latlng-format": "fcoo/leaflet-latlng-format#^0.5.0"
   },
   "devDependencies": {
     "bourbon": "latest",
