--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
   "name": "leaflet-layer-sealevel-denmark",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "homepage": "https://github.com/FCOO/leaflet-layer-sealevel-denmark",
   "authors": [
     "Jesper Larsen jla@fcoo.dk"
   ],
   "description": "",
   "main": [
-    "dist/leaflet-layer-sealevel-denmark.min.js",
-    "dist/leaflet-layer-sealevel-denmark.min.css"
+    "dist/leaflet-layer-sealevel-denmark.js",
+    "dist/leaflet-layer-sealevel-denmark.css"
   ],
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "dependencies": {
     "leaflet": "latest",
     "jquery": "latest",
-    "leaflet-latlng-format": "fcoo/leaflet-latlng-format#^0.5.0"
+    "leaflet-latlng-format": "fcoo/leaflet-latlng-format#^1.0.0"
   },
   "devDependencies": {
     "bourbon": "latest",
