--- a/bower.json
+++ b/bower.json
@@ -1,38 +1,37 @@
 {
-    "name": "leaflet-layer-sealevel-denmark",
-    "version": "0.1.6",
-    "homepage": "https://github.com/FCOO/leaflet-layer-sealevel-denmark",
-    "authors": [
-        "Jesper Larsen jla@fcoo.dk"
-    ],
-    "description": "",
-    "main": [
-        "dist/leaflet-layer-sealevel-denmark.js",
-        "dist/leaflet-layer-sealevel-denmark.css"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/FCOO/leaflet-layer-sealevel-denmark.git"
-    },
-    "dependencies": {
-        "leaflet": "latest",
-        "jquery": "latest",
-        "leaflet-latlng-format": "fcoo/leaflet-latlng-format#^0.5.0"
-    },
-    "devDependencies": {
-        "bourbon": "latest",
-        "modernizr-mixin": "latest",
-        "mathsass": "latest"
-    },
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests"
-    ],
-    "moduleType": [
-        "es6"
-    ]
+  "name": "leaflet-layer-sealevel-denmark",
+  "version": "1.0.0",
+  "homepage": "https://github.com/FCOO/leaflet-layer-sealevel-denmark",
+  "authors": [
+    "Jesper Larsen jla@fcoo.dk"
+  ],
+  "description": "",
+  "main": "dist/leaflet-layer-sealevel-denmark.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/FCOO/leaflet-layer-sealevel-denmark.git"
+  },
+  "dependencies": {
+    "leaflet": "latest",
+    "jquery": "latest",
+    "leaflet-latlng-format": "fcoo/leaflet-latlng-format#^1.0.0",
+    "leaflet-bootstrap": "fcoo/leaflet-bootstrap#^1.6.1",
+    "promise-get": "fcoo/promise-get#^1.0.1"
+  },
+  "devDependencies": {
+    "bourbon": "latest",
+    "modernizr-mixin": "latest",
+    "mathsass": "latest"
+  },
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "moduleType": [
+    "es6"
+  ]
 }
