--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-layer-sealevel-denmark",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "homepage": "https://github.com/FCOO/leaflet-layer-sealevel-denmark",
   "authors": [
     "Jesper Larsen jla@fcoo.dk"
@@ -15,8 +15,9 @@
     "leaflet": "latest",
     "jquery": "latest",
     "leaflet-latlng-format": "fcoo/leaflet-latlng-format#^1.0.0",
-    "leaflet-bootstrap": "fcoo/leaflet-bootstrap#^1.6.1",
-    "promise-get": "fcoo/promise-get#^1.0.1"
+    "leaflet-bootstrap": "fcoo/leaflet-bootstrap#^2.1.1",
+    "promise-get": "fcoo/promise-get#^1.0.1",
+    "leaflet-bootstrap-marker": "fcoo/leaflet-bootstrap-marker#^1.0.2"
   },
   "devDependencies": {
     "bourbon": "latest",
